# MERUEM

./: .env.example  MERUEM_MANUAL.md  TWITTER_X Hybrid vehicle.docx  TikTok_Development_Plan.docx  alembic_error.txt  docker-compose.prod.yml  docker-compose.yml  ps.txt  start-project.cmd  start-project.ps1  stop-project.cmd  stop-project.ps1  tiktok_plan_text.txt  twitter_doc.txt  updated_erd_with_identity_resolution.html
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase2_processing_columns.py  0003_phase3_vector_index.py  0004_phase5_campaigns_export.py  0005_phase6_indexes_columns.py  0006_phase7_ingestion.py  0007_phase8_profiling.py  0008_phase9_discovery.py  0009_ghost_virality.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/collectors/: bot_base.py  facebook.py  instagram.py  linkedin.py  manual_import.py  proxy_pool.py  storage.py  tiktok.py  tiktok_api.py  twitter.py
backend/app/core/: cache.py  celery_app.py  config.py  metrics.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/export/: csv_generator.py
backend/app/intelligence/: clustering.py  identity_resolution.py  lookalike.py  topic_classifier.py
backend/app/notifications/: email.py  in_app.py
backend/app/processing/: embeddings.py  entity_extractor.py  legibility.py  location_inference.py  ocr_safe_zone.py  pipeline.py  sentiment.py  text_cleaner.py  video_utils.py  whisper_asr.py
backend/app/prompts/: __init__.py  profiling.py  twitter_user_profiling.py
backend/app/schemas/: auth.py  campaigns.py  clusters.py  collection_jobs.py  (+9 more)
backend/tests/: conftest.py  test_auth.py  test_clustering.py  test_embeddings.py  test_entity_extractor.py  test_health.py  test_identity_resolution.py  test_location_inference.py  test_lookalike.py  test_profiling_routes.py  test_profiling_service.py  test_scoring_service.py  test_sentiment.py  test_text_cleaner.py  test_topic_classifier.py  test_twitter_discovery.py
(+127 files in other folders)
