[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meruem-backend"
version = "0.1.0"
description = "Meruem Audience Intelligence Platform – Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Validation
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.19",
    "pgvector>=0.3.2",

    # Cache / queue
    "redis>=5.0.4",
    "celery[redis]>=5.4.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP client
    "httpx>=0.27.0",

    # Social collectors
    "tweepy>=4.14.0",

    # Object storage
    "boto3>=1.34.0",

    # Phase 2 — NLP / processing pipeline
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "langdetect>=1.0.9",
    "ftfy>=6.2.0",

    # Phase 3 — ML intelligence
    "hdbscan>=0.8.38",
    "scikit-learn>=1.4.0",
    "rapidfuzz>=3.9.0",
    "numpy>=1.26.0",

    # Phase 6 — scale & monitoring
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=2.0.0",

    # Phase 7 — bot scraping & manual import
    "playwright>=1.44.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
